packages/parser/test/parser/E0149-object-declaration.txt
obj { a: int }
===== err =====
anonymous:1:4: ParseError: E0149 - Expected identifier after `obj` keyword
1 | obj { a: int }
  |    ^
